Implement restartJob
