# hack/python-sdk/swagger.json
@@ -82,7 +82,7 @@
       ],
       "properties": {
         "action": {
-          "description": "The action to take if the rule is matched.",
+          "description": "action to take if the rule is matched.",
           "type": "string",
           "default": ""
         },
@@ -251,19 +251,29 @@
           "x-kubernetes-list-type": "map"
         },
         "restarts": {
-          "description": "Restarts tracks the number of times the JobSet has restarted (i.e. recreated in case of RecreateAll policy).",
+          "description": "restarts tracks the number of times the JobSet has globally restarted (i.e. recreated all Jobs due to a restart action such as RestartJobSet).",
           "type": "integer",
           "format": "int32",
           "default": 0
         },
         "restartsCountTowardsMax": {
-          "description": "RestartsCountTowardsMax tracks the number of times the JobSet has restarted that counts towards the maximum allowed number of restarts.",
+          "description": "restartsCountTowardsMax tracks the number of times the JobSet has globally restarted that counts towards the maximum allowed number of restarts (i.e. recreated all Jobs due to a restart action such as RestartJobSet).",
           "type": "integer",
           "format": "int32"
         },
         "terminalState": {
-          "description": "TerminalState the state of the JobSet when it finishes execution. It can be either Completed or Failed. Otherwise, it is empty by default.",
+          "description": "terminalState tracks the state of the JobSet when it finishes execution. It can be either Completed or Failed. Otherwise, it is empty by default.",
           "type": "string"
+        },
+        "totalRestarts": {
+          "description": "totalRestarts tracks the number of times the JobSet has restarted in any way (e.g., this also counts restart actions such as RestartJob). Nil should be treated as `jobSet.status.restarts`",
+          "type": "integer",
+          "format": "int32"
+        },
+        "totalRestartsCountTowardsMax": {
+          "description": "totalRestartsCountTowardsMax tracks the number of times the JobSet has restarted in any way that counts towards the maximum allowed number of restarts (e.g., this also counts restart actions such as RestartJob). Nil should be treated as `jobSet.status.restartsCountTowardsMax`",
+          "type": "integer",
+          "format": "int32"
         }
       }
     },
@@ -347,6 +357,14 @@
           "type": "integer",
           "format": "int32",
           "default": 0
+        },
+        "jobRestarts": {
+          "description": "jobRestarts tracks the number of times the Job has individually restarted for each job index. It is encoded as `\u003crestarts of job 0\u003e,...,\u003crestarts of job replicas - 1\u003e` Max length is set to 32KB (32768 bytes). This is enough to handle 2 978 replicas per replicatedJob",
+          "type": "string"
+        },
+        "jobRestartsCountTowardsMax": {
+          "description": "jobRestartsCountTowardsMax tracks the number of times the Job has individually restarted that counts towards the maximum allowed number of restarts for each job index. It is encoded as `\u003crestarts of job 0\u003e,...,\u003crestarts of job replicas - 1\u003e` Max length is set to 32KB (32768 bytes). This is enough to handle 2 978 replicas per replicatedJob",
+          "type": "string"
         },
         "name": {
           "description": "Name of the ReplicatedJob.",
